@@ -16,12 +16,13 @@ my $infmt = undef;
 my $outfmt = undef;
 
 Getopt::Long::config('no_ignore_case');
-pod2usage(-verbose => 1) unless GetOptions("a|aln=s"    => \$infile_aln,
-					   "i|infmt=s"  => \$infmt,
-					   "o|otrfmt=s" => \$outfmt,
-                                           "man"        => sub{pod2usage(-verbose => 2)},
-                                           "help|h"     => sub{pod2usage(1)}
-					  );
+pod2usage(-verbose => 1) unless 
+    GetOptions("a|aln=s"   => \$infile_aln,
+	       "i=s"       => \$infmt,
+	       "o=s"       => \$outfmt,
+	       "man"       => sub{pod2usage(-verbose => 2)},
+	       "help|h"    => sub{pod2usage(1)}
+    );
 
 unless (-f $infile_aln){
   warn "Could not find input alignment file provided via -a|--aln option";
@@ -29,10 +30,12 @@ unless (-f $infile_aln){
 }
 
 my $in = Bio::AlignIO->new(-file => "$infile_aln" ,
-			   -format => $infmt);
+			   -format => $infmt,
+                           -displayname_flat => 1);
 
 my $out = Bio::AlignIO->new(-fh   => \*STDOUT ,
-			 -format => $outfmt);
+			    -format => $outfmt,
+                            -displayname_flat => 1);
 
 while ( my $aln = $in->next_aln ) {
     $out->write_aln($aln);
